--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body {
   margin-bottom: 32px;
 
   font-size: 30px;
+  color:blue;
   font-weight: 900;
   letter-spacing: 3px;
   text-transform: uppercase;
