--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ section img.img-loaded {
 h3 {
   margin-bottom: 36px;
 
-  color: green;
+  color: #666;
   font-size: 16px;
   text-transform: uppercase;
   font-weight: 400;
